<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#000000">

    <LinearLayout android:id="@+id/firstLL"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="180dp"

            android:text="@string/_0"
            android:gravity="center|end"
            android:textSize="@android:dimen/app_icon_size"
            android:textColor="@android:color/background_light"
            android:background="#000000"
            android:layout_margin="2dp"
            />
    </LinearLayout>




    <LinearLayout android:id="@+id/secondLL"
        android:orientation="horizontal"
        android:layout_below="@id/firstLL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/clean"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/c"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/plusOrMinus"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/plusOrMinus"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/percent"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/division"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#FF9800"
            android:textColor="@android:color/background_light"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />
    </LinearLayout>





    <LinearLayout android:id="@+id/thirdLL"
        android:orientation="horizontal"
        android:layout_below="@id/secondLL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_7"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_8"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_9"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/multiplication"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#FF9800"
            android:textColor="@android:color/background_light"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />
    </LinearLayout>




    <LinearLayout android:id="@+id/fourthLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/thirdLL">

        <Button android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_4"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_5"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_6"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/minus"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#FF9800"
            android:textColor="@android:color/background_light"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />
    </LinearLayout>





    <LinearLayout android:id="@+id/fifthLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/fourthLL">

        <Button android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_1"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_2"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/_3"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="105dp"

            android:text="@string/plus"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#FF9800"
            android:textColor="@android:color/background_light"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />
    </LinearLayout>





    <LinearLayout android:id="@+id/sixthLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/fifthLL">

        <Button android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:text="@string/_0"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="2"
            />

        <Button android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:text="@string/point"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#BEDDDA"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />

        <Button android:id="@+id/equally"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:text="@string/equally"
            android:gravity="center"
            android:textSize="@android:dimen/app_icon_size"
            android:background="#FF9800"
            android:textColor="@android:color/background_light"
            android:layout_margin="2dp"

            android:layout_weight="1"
            />
    </LinearLayout>


</RelativeLayout>